# CorruptedFilesAI

./: README.md  pyproject.toml
input/corrupted/: corruption_log.json
output/: results.csv
src/: main.py
src/model/: features.py  model.py  run_model.py  selecting.py  training.py  utils.py
src/preprocessing/: collectingpdfs.py  corrupting.py  generating_dataset.py
