[project]
authors = [{ name = "Noel Huibers", email = "noel@huibers.io" }]
name = "CorruptedFilesAI"
version = "0.0.2"
description = "A Python-based AI tool that detects corrupted PDF files using machine learning models trained on hexcode representation of PDF files."
readme = "README.md"
requires-python = ">=3.8"
license = { file = 'LICENSE' }
classifiers = [
  "Development Status :: 4 - Beta",
  "Natural Language :: English",
  "Operating System :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = ["scikit-learn==1.5.2", "numpy==2.1.1", "matplotlib==3.9.2"]


[tool.flake8]
max-line-length = 88
disable = ["E501", "E402", "E203", "W503"]
